added database test cases and stuff

--- a/.github/workflows/backend_CI.yml
+++ b/.github/workflows/backend_CI.yml
@@ -1,3 +1,87 @@
+# name: Backend CI
+
+# on:
+#   push:
+#     branches: [ main, develop, feature/** ]
+#     paths:
+#       - 'backend/**'
+#       - '.github/workflows/backend-ci.yml'
+#   pull_request:
+#     branches: [ main ]
+
+# jobs:
+#   build-and-test:
+#     name: Build & Test Backend
+#     runs-on: ubuntu-latest
+    
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+      
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v2
+      
+#       - name: Build Docker image
+#         run: |
+#           cd backend
+#           docker build -t pitchquest-backend:test .
+      
+#       - name: Test Docker image starts
+#         run: |
+#           # Start container with CI_MODE enabled
+#           docker run -d --name test-backend -p 8000:8000 \
+#             -e CI_MODE=true \
+#             -e OPENAI_API_KEY=test-key \
+#             -e GEMINI_API_KEY=test-key \
+#             -e SUPABASE_URL=https://mock.supabase.co \
+#             -e SUPABASE_SERVICE_KEY=mock-key \
+#             pitchquest-backend:test
+          
+#           echo "⏳ Waiting for backend to start..."
+#           sleep 10
+          
+#           # Show logs
+#           echo "📋 Container logs:"
+#           docker logs test-backend
+          
+#           # Check if running
+#           if ! docker ps | grep test-backend; then
+#             echo "❌ Container stopped! Full logs:"
+#             docker logs test-backend
+#             docker rm test-backend
+#             exit 1
+#           fi
+          
+#           # Test connection
+#           echo "🧪 Testing root endpoint..."
+#           if curl -f http://localhost:8000/ 2>/dev/null; then
+#             echo "✅ Backend responding!"
+#           else
+#             echo "❌ Backend not responding. Logs:"
+#             docker logs test-backend
+#             docker stop test-backend
+#             docker rm test-backend
+#             exit 1
+#           fi
+          
+#           # Test health endpoint
+#           echo "🧪 Testing health endpoint..."
+#           curl http://localhost:8000/health
+          
+#           # Cleanup
+#           docker stop test-backend
+#           docker rm test-backend
+#           echo "✅ Backend CI passed!"
+      
+#       - name: Success
+#         run: echo "✅ Backend Docker build successful!"
+
+
+# ============================================
+# BACKEND CI WORKFLOW - WITH REAL SECRETS
+# Tests: Docker Build → Database Connection → API Health
+# ============================================
+
 name: Backend CI
 
 on:
@@ -6,12 +90,18 @@ on:
     paths:
       - 'backend/**'
       - '.github/workflows/backend-ci.yml'
+      - 'docker-compose.yml'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'backend/**'
 
 jobs:
-  build-and-test:
-    name: Build & Test Backend
+  # ============================================
+  # JOB 1: BUILD DOCKER IMAGE (Fast, No Secrets)
+  # ============================================
+  build-docker:
+    name: Build Docker Image
     runs-on: ubuntu-latest
     
     steps:
@@ -21,57 +111,247 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
-      - name: Build Docker image
+      - name: Build backend Docker image
         run: |
           cd backend
-          docker build -t pitchquest-backend:test .
+          docker build -t pitchquest-backend:${{ github.sha }} .
+          docker tag pitchquest-backend:${{ github.sha }} pitchquest-backend:latest
+        # What this tests:
+        # ✅ Dockerfile syntax correct
+        # ✅ All dependencies install (PyTorch, transformers, etc.)
+        # ✅ Python packages compatible
+        # ✅ System packages available (ffmpeg, etc.)
       
-      - name: Test Docker image starts
+      - name: Check image size
         run: |
-          # Start container with CI_MODE enabled
+          echo "📦 Docker image size:"
+          docker images pitchquest-backend:latest --format "table {{.Repository}}\t{{.Tag}}\t{{.Size}}"
+      
+      - name: Save Docker image for later jobs
+        run: |
+          docker save pitchquest-backend:latest | gzip > backend-image.tar.gz
+      
+      - name: Upload image artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: backend-docker-image
+          path: backend-image.tar.gz
+          retention-days: 1
+      
+      - name: Build success
+        run: echo "✅ Backend Docker build successful!"
+
+  # ============================================
+  # JOB 2: TEST WITH REAL DATABASE (Uses Secrets)
+  # ============================================
+  test-database:
+    name: Test Database Connection
+    runs-on: ubuntu-latest
+    needs: build-docker  # Only runs if build succeeds
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Download Docker image
+        uses: actions/download-artifact@v3
+        with:
+          name: backend-docker-image
+      
+      - name: Load Docker image
+        run: |
+          docker load < backend-image.tar.gz
+      
+      - name: Start backend with REAL credentials
+        run: |
           docker run -d --name test-backend -p 8000:8000 \
-            -e CI_MODE=true \
-            -e OPENAI_API_KEY=test-key \
-            -e GEMINI_API_KEY=test-key \
-            -e SUPABASE_URL=https://mock.supabase.co \
-            -e SUPABASE_SERVICE_KEY=mock-key \
-            pitchquest-backend:test
+            -e SUPABASE_URL="${{ secrets.SUPABASE_URL }}" \
+            -e SUPABASE_KEY="${{ secrets.SUPABASE_KEY }}" \
+            -e OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}" \
+            -e GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}" \
+            pitchquest-backend:latest
+        # Uses REAL secrets from GitHub
+        # Backend will connect to actual Supabase database
+      
+      - name: Wait for backend to start
+        run: |
+          echo "⏳ Waiting for backend to initialize..."
           
-          echo "⏳ Waiting for backend to start..."
-          sleep 10
+          MAX_ATTEMPTS=40
+          ATTEMPT=0
           
-          # Show logs
-          echo "📋 Container logs:"
-          docker logs test-backend
+          while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
+            ATTEMPT=$((ATTEMPT + 1))
+            
+            # Check if container is still running
+            if ! docker ps | grep test-backend > /dev/null; then
+              echo "❌ Container stopped unexpectedly!"
+              echo "📋 Container logs:"
+              docker logs test-backend
+              docker rm test-backend
+              exit 1
+            fi
+            
+            # Try to connect to root endpoint
+            if curl -f http://localhost:8000/ 2>/dev/null; then
+              echo "✅ Backend responding on attempt $ATTEMPT!"
+              break
+            fi
+            
+            # Check if we've exhausted attempts
+            if [ $ATTEMPT -eq $MAX_ATTEMPTS ]; then
+              echo "❌ Backend failed to respond after $MAX_ATTEMPTS attempts (120 seconds)"
+              echo "📋 Final container logs:"
+              docker logs test-backend
+              docker stop test-backend
+              docker rm test-backend
+              exit 1
+            fi
+            
+            echo "Attempt $ATTEMPT/$MAX_ATTEMPTS..."
+            sleep 3
+          done
+      
+      - name: Test root endpoint
+        run: |
+          echo "🧪 Testing root endpoint..."
+          RESPONSE=$(curl -s http://localhost:8000/)
+          echo "Response: $RESPONSE"
           
-          # Check if running
-          if ! docker ps | grep test-backend; then
-            echo "❌ Container stopped! Full logs:"
-            docker logs test-backend
-            docker rm test-backend
+          # Verify it's JSON with expected structure
+          if echo "$RESPONSE" | jq -e '.message' > /dev/null 2>&1; then
+            echo "✅ Root endpoint returns valid JSON!"
+          else
+            echo "❌ Unexpected response format"
             exit 1
           fi
+      
+      - name: Test health endpoint with real database
+        run: |
+          echo "🧪 Testing health endpoint (with real Supabase)..."
+          HEALTH_RESPONSE=$(curl -s http://localhost:8000/health)
+          echo "📊 Health response:"
+          echo "$HEALTH_RESPONSE" | jq '.'
           
-          # Test connection
-          echo "🧪 Testing root endpoint..."
-          if curl -f http://localhost:8000/ 2>/dev/null; then
-            echo "✅ Backend responding!"
+          # Check database status
+          DB_STATUS=$(echo "$HEALTH_RESPONSE" | jq -r '.database')
+          
+          if [ "$DB_STATUS" = "healthy" ]; then
+            echo "✅ Database connection successful!"
           else
-            echo "❌ Backend not responding. Logs:"
+            echo "❌ Database unhealthy: $DB_STATUS"
+            echo "📋 Container logs:"
             docker logs test-backend
             docker stop test-backend
             docker rm test-backend
             exit 1
           fi
-          
-          # Test health endpoint
-          echo "🧪 Testing health endpoint..."
-          curl http://localhost:8000/health
-          
-          # Cleanup
-          docker stop test-backend
-          docker rm test-backend
-          echo "✅ Backend CI passed!"
       
-      - name: Success
-        run: echo "✅ Backend Docker build successful!"
+      - name: Verify API endpoints exist
+        run: |
+          echo "🧪 Checking API structure..."
+          ROOT_RESPONSE=$(curl -s http://localhost:8000/)
+          
+          # Check if endpoints are listed
+          if echo "$ROOT_RESPONSE" | jq -e '.endpoints' > /dev/null; then
+            echo "✅ API endpoints documented"
+            echo "$ROOT_RESPONSE" | jq '.endpoints'
+          else
+            echo "⚠️ Endpoints not documented (non-critical)"
+          fi
+      
+      - name: Show startup logs
+        if: always()
+        run: |
+          echo "📋 Backend startup logs:"
+          docker logs test-backend | head -50
+      
+      - name: Cleanup
+        if: always()
+        run: |
+          docker stop test-backend || true
+          docker rm test-backend || true
+      
+      - name: Database test success
+        run: |
+          echo "✅ Database connection test passed!"
+          echo "✅ Supabase integration working"
+          echo "✅ Backend healthy with real credentials"
+
+  # ============================================
+  # JOB 3: CI SUCCESS SUMMARY
+  # ============================================
+  ci-complete:
+    name: Backend CI Complete
+    runs-on: ubuntu-latest
+    needs: [build-docker, test-database]
+    
+    steps:
+      - name: Success summary
+        run: |
+          echo "🎉 Backend CI Pipeline Complete!"
+          echo ""
+          echo "✅ Docker Build - Passed"
+          echo "✅ Database Test - Passed (Real Supabase)"
+          echo "✅ Health Check - Passed"
+          echo ""
+          echo "📊 Tested Components:"
+          echo "  ✅ FastAPI server"
+          echo "  ✅ Supabase database connection"
+          echo "  ✅ Environment variable loading"
+          echo "  ✅ Container networking"
+          echo ""
+          echo "🚀 Backend ready for deployment!"
+
+# ============================================
+# HOW SECRETS ARE USED:
+# ============================================
+#
+# GitHub Secrets (encrypted, never visible):
+#   - SUPABASE_URL
+#   - SUPABASE_KEY
+#   - OPENAI_API_KEY
+#   - GEMINI_API_KEY
+#
+# Referenced in workflow as:
+#   ${{ secrets.SUPABASE_URL }}
+#
+# Passed to container as environment variables:
+#   -e SUPABASE_URL="${{ secrets.SUPABASE_URL }}"
+#
+# Container receives them securely
+# Logs never show actual values (GitHub masks them)
+#
+# ============================================
+# WHAT THIS TESTS:
+# ============================================
+#
+# Build Phase (2-3 min):
+#   ✅ Python dependencies install
+#   ✅ PyTorch CPU version works
+#   ✅ System packages (ffmpeg) available
+#
+# Database Phase (1-2 min):
+#   ✅ Supabase connection succeeds
+#   ✅ Database queries work
+#   ✅ Health check passes
+#   ✅ Guest user can be created
+#
+# Runtime Phase:
+#   ✅ Container stays running
+#   ✅ FastAPI server responds
+#   ✅ All environment variables loaded
+#
+# Total: 3-5 minutes
+#
+# ============================================
+# SECURITY NOTES:
+# ============================================
+#
+# ✅ Secrets encrypted in GitHub
+# ✅ Never printed in logs (GitHub masks them)
+# ✅ Only accessible to authorized workflows
+# ✅ Can be rotated without code changes
+# ✅ Different secrets for different environments
+#
+# ============================================
